munto_docs/DB정합성/v2/정산 비즈니스 규칙 명세서.md
# 정산 비즈니스 규칙 명세서

> 작성일: 2026-04-17
관련 이슈: WEBB-1325, WEBB-1326
개선 사항: [문토 비즈니스 규칙 개선 목록](https://www.notion.so/349e2bc7639d8041bb1eeabf4d01f778?pvs=21)
> 

---

## 1. 핵심 개념

### 1-1. 관련 테이블

| 테이블 | 역할 |
| --- | --- |
| `Settlement` | 정산 레코드. 호스트에게 지급할 금액과 산출 근거를 기록한다 |
| `Order` | 정산의 원천 데이터. 결제 금액(orderPrice)과 잔여 금액(remainPrice)을 참조한다 |
| `UserSettlement` | 호스트의 정산 계좌 정보 (은행, 계좌번호, 사업자 정보 등) |
| `SettlementChangeHistory` | 정산 상태 변경 이력 |

### 1-2. SettlementStatus 정의

```
PENDING              정산 생성 직후. 지급 대기 상태
COMPLETED            호스트에게 지급 완료
ONHOLD               지급 보류 (운영 판단)
LONG_TERM_UNSETTLED  paidOutAmount = 0인 정산. 생성 후 1주 뒤 자동 전환
                     ※ 네이밍 부적절: 실제 의미는 "정산 금액 없음"이므로 NO_PAYOUT 등으로 변경 검토
```

### 1-3. GatheringType 정의

```
SOCIALING   소셜링 (단건 모임)
CHALLENGE   챌린지 (기간제 모임)
CLUB        클럽 (구독형 모임)
COURSE      코스 (온라인 강좌)
```

---

## 2. 핵심 불변식

정산 도메인은 `order-common.md` Invariant 6(금액 정합성)에 의존하며, 아래 정산 고유 불변식을 추가한다.

### Invariant 1 — Settlement 중복 생성 방지

```
  한 도메인 아이템에 대해 동일 정산 기간 내
  활성(deletedAt IS NULL) Settlement은 최대 1개만 존재한다.
    - 소셜링/챌린지: 아이템당 활성 Settlement 1개
    - 클럽: 아이템당 월 1개 (매월 1~7일 실행 주기)
```

### Invariant 2 — 호스트 지급 금액 산출

```
  paidOutAmount = ROUND(settlementTargetAmount × 호스트지급률)
    - 소셜링: FLOOR(× 0.8)
    - 챌린지: × 0.8 (반올림 없음)
    - 클럽:   × 0.8 (반올림 없음)
```

### Invariant 3 — 정산 대상 인원 상한

```
  settlementTargetCount ≤ 도메인별 정원 상한
    - 소셜링: maximumPerson - staffCount
    - 챌린지: maximumMembers
    - 클럽:   maximumMembers (정원 초과분은 정산 제외)
  정원을 초과하는 Order는 정산 대상 건수에서 제외되어 호스트 지급액에 반영되지 않는다.
```

### Invariant 4 — Order 필드 의존

```
  정산 계산은 Order.orderPrice, Order.remainPrice, Order.refundPrice를 직접 참조한다.
  이 필드들의 정합성은 order-common.md Invariant 6에 의해 보장되어야 한다.
    - PARTIAL_REFUNDED Order: remainPrice = 결제 유지분, refundPrice = 환불분
    - 전액 환불 Order: remainPrice = 0
  ※ FAILED_CANCEL_PAYMENT Order는 PG 환불 실패로 remainPrice가 원래 값으로 남아
    정산에 잘못 포함될 수 있다 (§7-2 문제점 참조).
```

### Invariant 5 — LONG_TERM_UNSETTLED 자동 전환

```
  매주 화요일 05:00 KST:
    이번 주 생성된 Settlement 중 paidOutAmount = 0인 건 → LONG_TERM_UNSETTLED
  전환은 단방향이며, PENDING 복귀 없음.
```

### Invariant 6 — 정산 대상 Order 조건

```
  정산 대상 Order는 아래를 모두 만족한다:
    orderStatus IN (COMPLETED_PAYMENT, PARTIAL_REFUNDED, COMPLETED_CANCEL_PAYMENT)
    AND remainPrice > 0

  "유저가 실지불한 금액(remainPrice > 0)이 존재하고 결제가 확정된 상태"를 의미한다.
  환불 없는 취소(클럽 ONETIME/GRACE_PERIOD 취소, 소셜링 당일/3일 이내 취소 등)는
  COMPLETED_CANCEL_PAYMENT + remainPrice > 0 상태로 정산 대상에 포함된다.

  단, Invariant 3의 정원 상한이 함께 적용되어
  정원을 초과하는 Order 분은 정산 대상 건수에서 제외된다.
  예: 정원 10명 소셜링에 현재 APPROVE 9명 + 환불 없는 취소 4명 → 총 13건 중 10건만 정산 반영.

  실패 상태(FAILED_CANCEL_PAYMENT, PARTIAL_REFUND_FAILED)는 재시도 스케줄러로 해소 후
  다음 정산 주기에 자연스럽게 대상 상태로 복귀한다.
  결제 미완료(WAITING_PAYMENT, FAILED_PAYMENT, EXPIRED)는 대상 아님.
```

---

## 3. 공통 스케줄 규칙

```
실행 시각: 매주 화요일 04:00 KST (production)
         매 10분 (dev)

실행 순서:
  1. createChallengeSettlement()
  2. createClubSettlement()
  3. createSocialingSettlement()

중복 방지:
  각 도메인 아이템에 이미 활성(deletedAt IS NULL) Settlement이 있으면 생성하지 않는다.
  클럽은 추가로 이번 달에 이미 Settlement이 있으면 건너뛴다.

미정산 자동 전환:
  매주 화요일 05:00 KST에 이번 주 생성된 Settlement 중
  paidOutAmount = 0인 건을 LONG_TERM_UNSETTLED로 변경한다.
```

---

## 4. 도메인별 정산 규칙

### 4-1. 소셜링

```
[대상 선정]
  조건:
    - Socialing.status = COMPLETE (종료된 모임)
    - Socialing.startDate가 직전 1주(월~일) 범위에 포함
    - Socialing.price >= 10,000원
    - 해당 소셜링에 활성 Settlement이 없음 (Invariant 1)

[Order 필터] (Invariant 6)
  조건: orderStatus IN (COMPLETED_PAYMENT, PARTIAL_REFUNDED, COMPLETED_CANCEL_PAYMENT)
       AND remainPrice > 0

  환불 없는 취소(당일/3일 이내 본인 취소 등)도 remainPrice > 0이면 포함된다.
  FAILED_CANCEL_PAYMENT / PARTIAL_REFUND_FAILED는 실패 상태로 제외하며,
  재시도 스케줄러(order-common.md §5-2, §5-3) 해소 후 다음 주기에 대상 상태로 복귀.

[Order 집계]
  필터된 Order를 순회하며:

    CASE orderStatus = PARTIAL_REFUNDED (얼리버드 환불):
      paymentAmount += remainPrice    (실제 결제 유지 금액)
      discountAmount += refundPrice   (환불된 할인 금액)
      count += 1

    CASE orderStatus ∈ (COMPLETED_PAYMENT, COMPLETED_CANCEL_PAYMENT):
      paymentAmount += remainPrice   (COMPLETED_CANCEL_PAYMENT는 환불 없는 취소 건)
      count += 1

[정산 금액 계산]
  staffCount = STAFF 등급 + APPROVE 상태 멤버 수
  settlementTargetCount = MIN(집계된 주문 수, maximumPerson - staffCount)  (Invariant 3)
  settlementTargetAmount = MIN(paymentAmount, price × settlementTargetCount - discountAmount)

  paidOutAmount = FLOOR(settlementTargetAmount × 0.8)  (Invariant 2)

[정산 생성]
  Settlement 레코드를 생성한다.
  type = Socialing.clubId가 있으면 '클럽', 없으면 '일반'
```

### 4-2. 챌린지

챌린지는 얼리버드 부분환불 기능이 없어 `PARTIAL_REFUNDED` 상태로 전이되지 않는다.

```
[대상 선정]
  조건:
    - Challenge.status = COMPLETE
    - Challenge.endDate가 직전 1주(월~일) 범위에 포함
    - Challenge.price >= 10,000원
    - 해당 챌린지에 활성 Settlement이 없음 (Invariant SE1)

[Order 필터] (Invariant SE6)
  조건: orderStatus IN (COMPLETED_PAYMENT, COMPLETED_CANCEL_PAYMENT)
       AND remainPrice > 0

  환불 없는 취소(COMPLETED_CANCEL_PAYMENT + remainPrice > 0)는 포함.
  FAILED_CANCEL_PAYMENT는 실패 상태로 제외.
  챌린지는 PARTIAL_REFUNDED / PARTIAL_REFUND_FAILED 상태로 전이되지 않으므로
  필터 대상에 포함하지 않는다.

[Order 집계]
  필터된 Order를 순회하며:
    paymentAmount += remainPrice   (COMPLETED_CANCEL_PAYMENT는 환불 없는 취소 건)
    count += 1

[정산 금액 계산]
  settlementTargetCount = MIN(count, Challenge.maximumMembers)  (Invariant SE3)
  settlementTargetAmount = MIN(paymentAmount, Challenge.price × settlementTargetCount)

  paidOutAmount = settlementTargetAmount × 0.8  (Invariant SE2)
```

### 4-3. 클럽

```
[대상 선정]
  조건:
    - Club.price > 0
    - 2개월 전 ~ 1개월 전 사이에 생성된 Order 중 remainPrice > 0인 건이 있음
    - 이번 달에 해당 클럽의 활성 Settlement이 없음 (Invariant 1)
    - 매월 1~7일에만 실행됨 (production)

[Order 필터] (Invariant SE6)
  조건: orderStatus IN (COMPLETED_PAYMENT, PARTIAL_REFUNDED, COMPLETED_CANCEL_PAYMENT)
       AND remainPrice > 0
       AND createdAt 2개월전~1개월전

  환불 없는 취소(ONETIME/GRACE_PERIOD 취소)도 remainPrice > 0이면 포함.
  FAILED_CANCEL_PAYMENT / PARTIAL_REFUND_FAILED는 실패 상태로 제외.

  ※ GRACE_PERIOD 멤버의 이전 결제 Order는 취소 여부와 무관하게
    remainPrice > 0이면 정산 대상에 포함된다.
    단, Invariant 3의 정원(maximumMembers) 상한이 적용되어
    정원 초과분 Order는 settlementTargetCount에서 제외된다.

[Order 집계]
  totalCount = 필터된 Order 수
  totalPaymentAmount = SUM(remainPrice)

[정산 금액 계산]
  settlementTargetCount = MIN(totalCount, Club.maximumMembers)  (Invariant 3)
  settlementTargetAmount = MIN(totalPaymentAmount, Club.price × settlementTargetCount)

  paidOutAmount = settlementTargetAmount × 0.8  (Invariant 2)
```

---

## 5. 수수료율 요약

| 도메인 | 호스트 지급률 | 플랫폼 수수료 | 반올림 |
| --- | --- | --- | --- |
| 소셜링 | 80% | 20% | FLOOR (내림) |
| 챌린지 | 80% | 20% | 없음 |
| 클럽 | 80% | 20% | 없음 |
| 코스 | 59.5% (85% × 70%) | 40.5% | CEIL (올림) |

---

## 6. 정산 대상 기간 요약

| 도메인 | 기준 필드 | 대상 기간 | 정산 주기 |
| --- | --- | --- | --- |
| 소셜링 | Socialing.startDate | 직전 1주 (월~일) | 매주 화요일 |
| 챌린지 | Challenge.endDate | 직전 1주 (월~일) | 매주 화요일 |
| 클럽 | Order.createdAt | 2개월 전 ~ 1개월 전 | 매월 첫째 주 화요일 |
| 코스 | Order.createdAt | 직전 2주 전 (월~일) | 매주 화요일 |

---

## 7. Settlement 테이블 주요 컬럼

| 컬럼 | 설명 |
| --- | --- |
| gatheringType | SOCIALING / CHALLENGE / CLUB (COURSE는 서비스 종료 예정) |
| price | 1인당 가격 |
| maximumCount | 최대 정원 |
| staffCount | STAFF 멤버 수 (소셜링만 사용) |
| totalCount | 전체 주문 수 |
| confirmCount | 확정 참여자 수 |
| settlementMaxCount | 정산 가능 최대 인원 |
| settlementTargetCount | 실제 정산 대상 인원 |
| totalPaymentAmount | 전체 결제 금액 합계 |
| settlementTargetAmount | 정산 대상 금액 (수수료 차감 전) |
| discountAmount | 할인/환불 금액 합계 |
| paidOutAmount | 호스트 지급 금액 (수수료 차감 후) |
| paidOutDate | 실제 지급일 |
| status | PENDING → COMPLETED / ONHOLD / LONG_TERM_UNSETTLED |
| type | '클럽' 또는 '일반' (소셜링만 사용) |

---

<aside>
🔁

## **변경 이력**

</aside>

| **버전** | **일자** | **변경자** | **변경 내용** |
| --- | --- | --- | --- |
| v1.0.0 | 26.04.16 | 김범진 | 최초 작성 |
| v1.1.0 | 26.04.21 | 김범진 |   • 핵심 불변식 항목 추가
  • orderStatus 필터링 통일
  • 정산 대상 Order 조건 확정 |